[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyCipher-cli"
version = "0.1.0-alpha1"
authors = [
  { name="Nicholas Kammerer", email="dev.nxrada@gmail.com" },
]
description = "A command-line encryption tool for text (.txt) files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPL v3+ License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nxrada/pycipher-cli"
"Bug Tracker" = "https://github.com/nxrada/pycipher-cli/issues"